nuevas imgs coleccion

--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -107,8 +107,8 @@
     <p class="producto">Precio</p>
    </div>
    <div>
-    <img class="fotos-cuadradas-4"src="https://dummyimage.com/700x250/c9c2af/6b5e52.png" alt="COLECCION">
-    <img class="fotos-cuadradas-4"src="https://dummyimage.com/700x250/c9c2af/6b5e52.png" alt="COLECCION">
+    <img class="fotos-cuadradas-4"src=../img/coleccion-look14.jpg alt="COLECCION">
+    <img class="fotos-cuadradas-4"src=../img/coleccion-cardiganybiker2023.jpg alt="COLECCION">
     <p class="producto">Pantalón</p>
     <p class="producto">Precio</p>
     <p class="producto">Pantalón</p>
@@ -135,6 +135,8 @@
     <p class="producto">Pantalón</p>
     <p class="producto">Precio</p>
    </div>
+   <img class="fotos-cuadradas-5" src=../img/coleccion-marion-verdeagua.jpg alt="COLECCION">
+
   <div>
  </main>
  <hr>
