agregando imgs en accesorios

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -76,8 +76,10 @@
     <img class="fotos-cuadradas" src="../img/vinchatrenzada.jpg" alt="COLECCION">
    </div> 
    <div>
-    <img class="fotos-cuadradas"src="../img/pulserascoloresflecos.jpg" alt=""COLECCION>
+    <img class="fotos-cuadradas"src="../img/pulserascoloresflecos.jpg" alt="COLECCION">
     <img class="fotos-cuadradas"src="../img/pulserasbohemias.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/accesorios-pulserasflecos-verano.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/accesorios-pulseraancla-verano.jpg" alt="COLECCION">
    </div>  
      <h2>
       Liberá tu Creatividad
@@ -86,9 +88,9 @@
     <img  class="fotos-cuadradas"src="../img/pendientescruzdeestrella.jpg" alt="COLECCION">
    </div>  
    <div>
-    <img class="fotos-cuadradas" src="https://dummyimage.com/250x250/c9c2af/fff" alt="COLECCION">
-    <img class="fotos-cuadradas"src="https://dummyimage.com/250x250/c9c2af/6b5e52.png" alt=""COLECCION>
-    <img class="fotos-cuadradas"src="https://dummyimage.com/250x250/c9c2af/6b5e52.png" alt=""COLECCION>
+    <img class="fotos-cuadradas" src="../img/aaccesorios2-arosperlas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/accesorios-arocolgantes-perlascascada.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="https://dummyimage.com/250x250/c9c2af/6b5e52.png" alt="COLECCION">
    </div>
    <div>
     <img class="fotos-cuadradas" src="https://dummyimage.com/300x500/c9c2af/fff" alt="COLECCION">
