ultimas imgs de accesorios

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -90,16 +90,51 @@
    <div>
     <img class="fotos-cuadradas" src="../img/aaccesorios2-arosperlas.jpg" alt="COLECCION">
     <img class="fotos-cuadradas"src="../img/accesorios-arocolgantes-perlascascada.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="https://dummyimage.com/250x250/c9c2af/6b5e52.png" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesorios-arosflorescascadablancas.jpg" alt="COLECCION">
    </div>
    <div>
-    <img class="fotos-cuadradas" src="https://dummyimage.com/300x500/c9c2af/fff" alt="COLECCION">
-   </div>  
+    <img class="fotos-cuadradas"src="../img/accesorios-arosfloresblancas.jpg" alt="COLECCION">
+  </div>  
    <div>
-    <img class="fotos-cuadradas" src="https://dummyimage.com/250x250/c9c2af/fff" alt="COLECCION">
-    <img class="fotos-cuadradas" src="https://dummyimage.com/250x250/c9c2af/fff" alt="COLECCION">
-    <img class="fotos-cuadradas" src="https://dummyimage.com/250x250/c9c2af/fff" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesorios1-arosseisperlas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesorios-pendientescirculargrande-perlas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesorios-arosperlas-joyerinusual.jpg" alt="COLECCION">
    </div>
+   <div>
+    <img class="fotos-cuadradas"src="../img/accesorios-aroslargos-colgantes-isadora.jpg" alt="COLECCION">
+  </div> 
+  <div>
+    <img class="fotos-cuadradas"src="../img/accesorios-arosflorestranslucidas.jpg" alt="COLECCION">
+  </div> 
+  <div>
+    <img class="fotos-cuadradas"src="../img/accesorioscollarperlasrojorosa.jpg" alt="COLECCION">
+  </div> 
+  <div>
+    <img class="fotos-cuadradas" src="../img/accesorios-gafasrojas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesorios-gafasbatblack.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesorios-viseras.jpg" alt="COLECCION">
+   </div>
+   <div>
+    <img class="fotos-cuadradas" src="../img/accesoriosanillos-mariposascolores.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesoriosanillos-luxury.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesorios-anillos-mariposacristal-dijevintage.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/accesorios-anillosmariposacalada.jpg" alt="COLECCION">
+  </div>
+  <div>
+    <img class="fotos-cuadradas" src="../img/holdercelurosaamarillo.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/holdercelumamalove.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/holderceluhappy.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/holderceluazul.jpg" alt="COLECCION">
+  </div>
+  <div>
+    <img class="fotos-cuadradas"src="../img/holdercelu.jpg" alt="COLECCION">
+  </div> 
+  <div>
+    <img class="fotos-cuadradas" src="../img/hebillasperlas2.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/hebillasperlas.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/gorrabeisballredbatik.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/gorrabeisballred.jpg" alt="COLECCION">
+  </div>
   </div>
  </main>
 
