poniendo imgs en beauty

--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -83,6 +83,23 @@
     <img class="fotos-cuadradas"src="../img/parfumacquaverdedigioia.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="https://dummyimage.com/300x150/c9c2af/fff" alt="COLECCION">
    </div>
+   <div class="pagina-principal">
+    <img  class="fotos-cuadradas"src="../img/beauty-maxmixbvlgary.jpg" alt="COLECCION">
+    <img  class="fotos-cuadradas"src="../img/beauty-parfumbvlgariomnia-eau-de-toilette.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/beauty-parfumbvlgariomnia-pink-sapphire-2.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/beauty-parfumomnia-pink-sapphire.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/beauty-parfumbvlgariomniacrystaline-eau-de-toilette.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/unasveranobe.jpg" alt="COLECCIÓN">
+    <img class="fotos-cuadradas" src="../img/unascombinacionveranobe.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/unasazulbe.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/unasmetalizadasdecobe.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/unasmetalizada.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/unasesmalte-metalizado-efecto-espejo.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/parfumairdigioia-acquadigioia-sundigioia.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/parfunarmaniocean.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/parfumacquaverdedigioia.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="https://dummyimage.com/300x150/c9c2af/fff" alt="COLECCION">
+   </div>
  </main>
 
  <hr>
