imgs a beauty parfums

--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -89,14 +89,15 @@
     <img class="fotos-cuadradas" src="../img/beauty-parfumbvlgariomnia-pink-sapphire-2.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/beauty-parfumomnia-pink-sapphire.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="../img/beauty-parfumbvlgariomniacrystaline-eau-de-toilette.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/unasveranobe.jpg" alt="COLECCIÓN">
-    <img class="fotos-cuadradas" src="../img/unascombinacionveranobe.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/unasazulbe.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas" src="../img/unasmetalizadasdecobe.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/unasmetalizada.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/unasesmalte-metalizado-efecto-espejo.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/parfumairdigioia-acquadigioia-sundigioia.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas"src="../img/parfunarmaniocean.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/beauty-parfumbvlgariomnia-by-mary-katrantzou.jpg" alt="COLECCIÓN">
+    <img class="fotos-cuadradas" src="../img/beauty-cacharel2.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/beauty-cacharel.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/beauty-flower-bykenzo.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas" src="../img/beauty-kenzo.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/beauty-givenchy.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/beauty-myway-giorgio.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/beauty-parfumbeigecalvin.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas"src="../img/.jpg" alt="COLECCION">
     <img class="fotos-cuadradas"src="../img/parfumacquaverdedigioia.jpg" alt="COLECCION">
     <img class="fotos-cuadradas" src="https://dummyimage.com/300x150/c9c2af/fff" alt="COLECCION">
    </div>
