ultimos agregados de imgs

--- a/pages/newin.html
+++ b/pages/newin.html
@@ -105,6 +105,7 @@
   </div>
   <div>
     <img class="fotos-cuadradas"src=../img/newin-naranjatotal.jpg alt="NEW IN">
+    <img class="fotos-cuadradas"src=../img/newin-remerprimaverabeige.jpg alt="NEW IN">
     <img class="fotos-cuadradas"src=../img/newin-jeansmoda-2022.jpg alt="NEW IN">
    </div>
    <div class="producto" >
