menu burger en htmls

--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -35,6 +35,8 @@
  </header>
    
  <nav id="nav" class="nav">
+  <input type= "checkbox" id= "burger">
+  <label for="burger">☰</label>
   <!-- Listas y links de Navegación -->
   <ul class="nav-menu color-primary">
    <li class="nav-menu-item">
