--- a/pages/items/iniciarsesion.html
+++ b/pages/items/iniciarsesion.html
@@ -20,6 +20,8 @@
   </header>
 
   <nav id="nav" class="nav">
+    <input type= "checkbox" id= "burger">
+    <label for="burger">☰</label>
     <!-- Listas y links de Navegación -->
     <ul class="nav-menu color-primary">
      <li class="nav-menu-item">
@@ -51,11 +53,11 @@
   <h3>INICIA SESION</h3>
   <form class="registro" action="">
    <div>
-    <label class="registro-registro" for="">E-MAIL</label>
-    <input class="registro-registro" type="email" name="" id="">
+    <label class="registro-registro" for="floatingInput">E-mail adress</label>
+    <input class="registro-registro form-control" type="email" name="" id="floatingInput" placeholder="name@example.com">
    </div>  
    <div>
-    <label class="registro-registro" for="">CONTRASEÑA</label>
+    <label class="registro-registro " for="">CONTRASEÑA</label>
     <input class="registro-registro" type="password" name="" id="">
    </div>
    <div>
