--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -35,8 +35,11 @@
  </header>
    
  <nav id="nav" class="nav">
-  <input type= "checkbox" id= "burger">
-  <label for="burger">☰</label>
+  <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
+  <label for="abrir-cerrar" class="toggle-button">
+   <span class="cerrar" title="Cerrar">Cerrar</span>
+   <span class="abrir" title="Abrir">Abrir</span>  
+  </label>
   <!-- Listas y links de Navegación -->
   <ul class="nav-menu color-primary">
    <li class="nav-menu-item">
