--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -34,8 +34,11 @@
  </header>
    
  <nav id="nav" class="nav">
-  <input type= "checkbox" id= "burger">
-  <label for="burger">☰</label>
+  <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
+  <label for="abrir-cerrar" class="toggle-button">
+   <span class="cerrar" title="Cerrar">Cerrar</span>
+   <span class="abrir" title="Abrir">Abrir</span>
+  </label>
   <!-- Listas y links de Navegación -->
   <ul class="nav-menu color-primary">
    <li class="nav-menu-item">
@@ -111,7 +114,7 @@
  <footer>
   <h3>SUSCRIBITE A NUESTRO NEWSLETTER</h3>
   <form  action="">
-   <div>
+   <div id="contacto-home">
     <label for="">ESCRIBI TU E-MAIL</label>
    </div> 
    <div>
@@ -133,7 +136,7 @@
    <li>
     <p>Seguinos</p>
    </li>
-   <li id="contacto-home">
+   <li>
     <a href="https://es-la.facebook.com/"target="_blank"><img class="socialmedia" src="../img/facecrema.jpg" alt="Facebook"></a>
    </li>
    <li>
