--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
     <b> Envío gratis desde $10.000</b>
    </div>
     <!-- logo/Home -->
-     <img  id="logo-home" src= "img/faviconII200x100px.png" alt="BE">
+     <a href=""><img  id="logo-home" src= "img/faviconII200x100px.png" alt="BE"></a>
      <div>
       <ul class="nav-menu-color-primary" >
-        <li >
-         <a class="fondo" href="pages/items/buscar.html">Buscar</a> 
-        </li>
-        <li>
-         <a class="fondo" href="pages/items/iniciarsesion.html">Iniciar Sesión</a> 
-        </li>
-        <li>
-         <a class="fondo" href="pages/items/micarrito.html">Mi Carrito</a> 
+       <li >
+        <a class="fondo" href="pages/items/buscar.html">Buscar</a> 
+       </li>
+       <li>
+        <a class="fondo" href="pages/items/iniciarsesion.html">Iniciar Sesión</a> 
+       </li>
+       <li>
+        <a class="fondo" href="pages/items/micarrito.html">Mi Carrito</a> 
         </li>
        </ul>
      </div>
@@ -48,24 +48,24 @@
     <!-- Listas y links de Navegación -->
     <ul class="nav-menu">
      <li class="link">
-      <a class="link"  href="pages/newin.html">NEW IN</a>
-      </li>
-      <li>
-       <a class="link olor-primary" href="pages/coleccion.html">COLECCION </a>
-      </li>
-      <li>
-       <a class="link color-primary" href="pages/accesorios.html">ACCESORIOS</a>
-      </li>
-      <li>
-       <a class="link color-primary" href="pages/beauty.html">BEAUTY</a>
-      </li>
-      <li>
-       <a class="link color-primary" href="pages/promociones.html">PROMOCIONES</a>
-      </li>
-      <li>
-       <a class="link color-primary" href="#contacto-home">CONTACTO</a> 
-      </li>
-     </ul>
+      <a class="link" href="pages/newin.html">NEW IN</a>
+     </li>
+     <li>
+      <a class="link olor-primary" href="pages/coleccion.html">COLECCION </a>
+     </li>
+     <li>
+      <a class="link color-primary" href="pages/accesorios.html">ACCESORIOS</a>
+     </li>
+     <li>
+      <a class="link color-primary" href="pages/beauty.html">BEAUTY</a>
+     </li>
+     <li>
+      <a class="link color-primary" href="pages/promociones.html">PROMOCIONES</a>
+     </li>
+     <li>
+      <a class="link color-primary" href="#contacto-home">CONTACTO</a> 
+     </li>
+    </ul>
     </nav>
    </div>   
   <main>
@@ -81,7 +81,7 @@
     <div class="row">
      <div class="col">
       <div class="collapse multi-collapse" id="multiCollapseExample1">
-       <div class="card    card-body">
+       <div class="card card-body">
         Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
       </div>
       </div>
@@ -99,7 +99,7 @@
      This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
     </div>
    </div>
-  </div>
+   </div>
    </div>
     <div  class="pagina-principal">
       <H2>LOOKS DE INSPIRACION</H2>
@@ -126,7 +126,7 @@
          <p class="producto-look">Precio</p>
          <p class="producto-look">Remera </p>
          <p class="producto-look">Precio</p>
-        </div>
+       </div>
   </main>
   
   <hr>
@@ -140,35 +140,35 @@
      <div>
       <input type="email" name="" id="">
      </div>
-      </form>
-       <ul>
-        <li>
-         <p>Contactanos</p>
-        </li>
-        <li>
-         <a href="https://m.facebook.com/messenger/?locale=es_LA"target="_blank"><img  class="socialmedia"src="img/messengercrema.jpg" alt="Messenger"></a>
-        </li>
-        <li>
-         <a href="https://www.whatsapp.com/?lang=es"target="_blank"><img class="socialmedia" src="img/whatsappcrema.jpg" alt="Whatsapp"></a>
-        </li>
-       </ul>
-       <ul>
-        <li>
-         <p>Seguinos</p>
-        </li>
-        <li>
-         <a href="https://es-la.facebook.com/"target="_blank"><img class="socialmedia" src="img/facecrema.jpg" alt="Facebook"></a>
-        </li>
-        <li>
-         <a href="https://www.instagram.com/"target="_blank"><img class="socialmedia" src="img/igcrema.jpg" alt="Instagram"></a>
-        </li>
-        <li>
-         <a href="https://open.spotify.com/"target="_blank"><img class="socialmedia" src="img/spotifycrema.jpg" alt="Spotify"></a>
-        </li>
-       </ul>
-         <p>Quiero devolver mi pedido. Be-todos los derechos reservados. Terminos y Condiciones</p>
+    </form>
+    <ul>
+     <li>
+      <p>Contactanos</p>
+     </li>
+     <li>
+      <a href="https://m.facebook.com/messenger/?locale=es_LA"target="_blank"><img  class="socialmedia"src="img/messengercrema.jpg" alt="Messenger"></a>
+     </li>
+     <li>
+      <a href="https://www.whatsapp.com/?lang=es"target="_blank"><img class="socialmedia" src="img/whatsappcrema.jpg" alt="Whatsapp"></a>
+     </li>
+    </ul>
+    <ul>
+     <li>
+      <p>Seguinos</p>
+     </li>
+     <li>
+      <a href="https://es-la.facebook.com/"target="_blank"><img class="socialmedia" src="img/facecrema.jpg" alt="Facebook"></a>
+     </li>
+     <li>
+       <a href="https://www.instagram.com/"target="_blank"><img class="socialmedia" src="img/igcrema.jpg" alt="Instagram"></a>
+     </li>
+     <li>
+       <a href="https://open.spotify.com/playlist/6hs2RG7VYdO02VfTu6tKmI?si=9056c7aee273492a"target="_blank"><img class="socialmedia" src="img/spotifycrema.jpg" alt="Spotify"></a>
+      </li>
+     </ul>
+       <p><span> Quiero devolver mi pedido.</span> Be-todos los derechos reservados. Terminos y Condiciones</p>
   </footer>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
 
