--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -24,7 +24,7 @@
    <b> Envío gratis desde $10.000</b>
   </div>
   <!-- logo/Home -->
-  <img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE">
+  <a href="../index.html"> <img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE"></a>
   <ul class="nav-menu-color-primary" > 
    <li>
     <a class="fondo" href="items/iniciarsesion.html">Iniciar Sesión</a>
