--- a/pages/items/iniciarsesion.html
+++ b/pages/items/iniciarsesion.html
@@ -16,7 +16,7 @@
 <body>
   <header id="header">
    <!-- logo/Home -->
-   <img  id="logo-home" src= "../../img/faviconII200x100px.png" alt="BE"> 
+  <a href="../../index.html"><img  id="logo-home" src= "../../img/faviconII200x100px.png" alt="BE">Home</a>
   </header>
 
   <nav id="nav" class="nav">
