--- a/pages/newin.html
+++ b/pages/newin.html
@@ -24,7 +24,7 @@
    <b> Envío gratis desde $10.000</b>
   </div>
   <!-- logo/Home -->
-  <img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE">
+  <a href="../index.html"><img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE"></a>
   <ul class="nav-menu-color-primary" > 
    <li>
     <a class="fondo" href="items/iniciarsesion.html">Iniciar Sesión</a> 
@@ -71,12 +71,12 @@
 
  <main>
   <div class="pagina-principal">
-   <h1 >No te pierdas nada</h1>     
+   <h1 class="new-in" >Descubri las tendencias de la temporada</h1>     
   </div>
   <div>
   <div class="card text-center">
     <div class="card-header">
-      Featured
+     <img src="../img/ingresoprimavera2022.jpg" alt="Be tendencias">  
     </div>
     <div class="card-body">
       <h5 class="card-title">No te pierdas de nada</h5>
