--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -24,8 +24,9 @@
     <b> Envío gratis desde $10.000</b>
   </div>
   <!-- logo/Home -->
-  <img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE">
-  <ul class="nav-menu-color-primary" >   <li>
+ <a href="../index.html"> <img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE"></a>
+  <ul class="nav-menu-color-primary" > 
+   <li>
     <a class="fondo" href="items/iniciarsesion.html">Iniciar Sesión</a> 
    </li>
    <li>
