--- a/pages/items/iniciarsesion.html
+++ b/pages/items/iniciarsesion.html
@@ -16,7 +16,7 @@
 <body>
   <header id="header">
    <!-- logo/Home -->
-  <a href="../../index.html"><img  id="logo-home" src= "../../img/faviconII200x100px.png" alt="BE">Home</a>
+  <a href="../../index.html"><img  id="logo-home" src= "../../img/faviconII200x100px.png" alt="BE"></a>
   </header>
 
   <nav id="nav" class="nav">
@@ -52,58 +52,58 @@
  </nav>
  
  <main>
-  <!-- Formulario de Inicio de sesion/Crear Cuenta] -->
-  <h3>INICIA SESION</h3>
-  <form class="registro" action="">
-   <div>
-    <label class="registro-registro" for="floatingInput">E-mail adress</label>
-    <input class="registro-registro form-control" type="email" name="" id="floatingInput" placeholder="name@example.com">
-   </div>  
-   <div>
-    <label class="registro-registro " for="">CONTRASEÑA</label>
-    <input class="registro-registro" type="password" name="" id="">
-   </div>
-   <div>
-    <p> ¿HAS OLVIDADO TU CONTRASEÑA?</p>
-   </div>
-  </form>
-  <!--Formularios para registrarse nuevo usuario  --> 
-  <h3>NUEVO USUARIO</h3>
-  <form class="registro" action="">
-   <div>
-    <label class="registro-registro"for="">E-MAIL</label>
-    <input class="registro-registro"  type="email" name="" id="">
-   </div>
-   <div>
-    <label  class="registro-registro" for="">NOMBRE</label>
-    <input type="text">
-    <label class="registro-registro" for="">APELLIDOS</label>
-    <input class="registro-registro" type="text">
-   </div>
-    <label class="registro-registro" for="">Fecha de Nacimiento</label>
-   </div>
-   <div>
-    <input class="registro-registro"  type="date" name="" id="">
-   </div>
-   <div>
-    <label class="registro-registro" for="">CONTRASEÑA</label>
-    <input class="registro-registro" type="password" name="" id="">
-    <label class="registro-registro" for="">REPETIR CONTRASEÑA</label>
-    <input class="registro-registro" type="password" name="" id="">
-   </div>  
-   <div>
-    <input class="registro-registro" type="checkbox" name="Notificaciones de Correo" id="">
-    <label for="">Suscribite para recibir novedades a través de tu e-mail</label>
-   </div>
-   <div>
-    <input type="checkbox" name="Acepto" id="">
-    <label for=""> Acepto los Términos y Condiciones</label>
-   </div>
-   <div>
-    <input class="registro-registro" type="submit" value="Crear Cuenta">
-    <input class="registro-registro" type="reset" value="Limpiar">
-   </div>
-  </form>
+   <!-- Formulario de Inicio de sesion/Crear Cuenta] -->
+   <h3>INICIA SESION</h3>
+   <form class="registro" action="">
+    <div>
+     <label class="registro-registro" for="">E-MAIL</label>
+     <input class="registro-registro" type="email" name="" id="">
+    </div>  
+    <div>
+     <label class="registro-registro" for="">CONTRASEÑA</label>
+     <input class="registro-registro" type="password" name="" id="">
+    </div>
+    <div>
+     <p> ¿HAS OLVIDADO TU CONTRASEÑA?</p>
+    </div>
+   </form>
+   <!--Formularios para registrarse nuevo usuario  --> 
+   <h3>NUEVO USUARIO</h3>
+   <form class="registro" action="">
+    <div>
+     <label class="registro-registro"for="">E-MAIL</label>
+     <input class="registro-registro"  type="email" name="" id="">
+    </div>
+    <div>
+     <label  class="registro-registro" for="">NOMBRE</label>
+     <input type="text">
+     <label class="registro-registro" for="">APELLIDOS</label>
+     <input class="registro-registro" type="text">
+    </div>
+     <label class="registro-registro" for="">Fecha de Nacimiento</label>
+    </div>
+    <div>
+     <input class="registro-registro"  type="date" name="" id="">
+    </div>
+    <div>
+     <label class="registro-registro" for="">CONTRASEÑA</label>
+     <input class="registro-registro" type="password" name="" id="">
+     <label class="registro-registro" for="">REPETIR CONTRASEÑA</label>
+     <input class="registro-registro" type="password" name="" id="">
+    </div>  
+    <div>
+     <input class="registro-registro" type="checkbox" name="Notificaciones de Correo" id="">
+     <label for="">Suscribite para recibir novedades a través de tu e-mail</label>
+    </div>
+    <div>
+     <input type="checkbox" name="Acepto" id="">
+     <label for=""> Acepto los Términos y Condiciones</label>
+    </div>
+    <div>
+     <input class="registro-registro" type="submit" value="Crear Cuenta">
+     <input class="registro-registro" type="reset" value="Limpiar">
+    </div>
+   </form>
  </main>
 
  <hr>
