--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h1>Elegí tus looks</h1>
     <h2> INSPIRATE</h2>
    </div>
-   <div class="pagina-principal">
+   <div class="wrapper">
     <img class="fotos-altas" src=img/look-pantfluo.jpg alt="INSPIRACION LOOKS">
      <p>
       <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">¿TEAM COMFY?</a>
