--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -68,7 +68,7 @@
 
  <hr>
 
- <main class="grillacoleccion">
+ <main >
   <div class="pagina-principal">
    <h1>Elegí tus looks</h1>
    <h2> INSPIRATE</h2>
@@ -77,13 +77,14 @@
   <div>
    <iframe title="vimeo-player" src="https://player.vimeo.com/video/730454329?h=a284fe1e10" width="640" height="360" frameborder="0" allowfullscreen></iframe>
   </div>
-  <div class="pagina-pricipal ">
-   <div class="fotos">
-    <img class="fotos-cuadradas-1"src="https://lh3.googleusercontent.com/p/AF1QipOYOVeEl9df4i2BX_SHNwT-xAJE6PSJ0DaZRigW=w768-h768-n-o-v1" alt="COLECCION">
-    <img class="fotos-cuadradas-1-alargadas" src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/012/978/products/g28a46121-d763a25b2a362a339e16608334184820-640-0.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas-1-alargadas" src="../img/remerarockstar.jpg" alt="COLECCION">
-   </div>
-   <div class="producto">  
+  <div class="wrapper1">
+   <div class="wrapper1 fotoscoleccion">
+    <img class="fotos1"src="https://lh3.googleusercontent.com/p/AF1QipOYOVeEl9df4i2BX_SHNwT-xAJE6PSJ0DaZRigW=w768-h768-n-o-v1" alt="COLECCION">
+    <img class="fotos1-altas" src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/012/978/products/g28a46121-d763a25b2a362a339e16608334184820-640-0.jpg" alt="COLECCION">
+    <img class="fotos1-altas-2" src="../img/remerarockstar.jpg" alt="COLECCION">
+    <img class="fotos1-alargadas" src="../img/coleccion-remeaerosmith..jpg" alt="COLECCION">
+  </div>
+  <div class="producto">  
     <p class="producto">Pantalón</p>
     <p class="producto">Precio</p>
     <p class="producto">Pantalón</p>
@@ -91,21 +92,20 @@
     <p class="producto">Pantalón</p> 
     <p class="producto">Precio</p>
    </div>
-   <div>
-    <img class="fotos-cuadradas-2"src="../img/remeraceratigiraahivamos.jpg" alt="COLECCION">
-    <img class="fotos-cuadradas-2"src="../img/remeraceratibasement.jpg" alt="COLECCION">
+   <div  class="fotoscoleccion">
+    <img class="fotos-cuadradas2"src="../img/remeraceratigiraahivamos.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas2"src="../img/remeraceratibasement.jpg" alt="COLECCION">
+    <img class="fotos-cuadradas3" src="https://lh3.googleusercontent.com/p/AF1QipNR2LRLujV500dMuf4aV_Zc-yxy625jQ1kFH9nV=w1080-h608-p-no-v0" alt="COLECCION">
    </div>
    <div>
     <p class="producto">Pantalón</p> 
     <p class="producto">Precio</p>
     <p class="producto">Pantalón</p> 
     <p class="producto">Precio</p>
-   </div>
-    <img class="fotos-cuadradas-3" src="https://lh3.googleusercontent.com/p/AF1QipNR2LRLujV500dMuf4aV_Zc-yxy625jQ1kFH9nV=w1080-h608-p-no-v0" alt="COLECCION">
-   <div>
+
     <p class="producto">Pantalón</p> 
     <p class="producto">Precio</p>
-   </div>
+   </div  class="fotoscoleccion">
     <img class="fotos-cuadradas-2"src=../img/coleccion-camisaconflorestranslucida.jpg alt="COLECCION">
    <div class="producto">  
     <p class="producto">Pantalón</p>
@@ -124,11 +124,11 @@
     <p class="producto">Pantalón</p>
     <p class="producto">Precio</p>
    </div>
-   <div>
-    <img class="fotos-cuadradas-5" src=../img/.jpg alt="COLECCION">
+   <div  class="fotoscoleccion5">
     <img class="fotos-cuadradas-5" src=../img/coleccion-camisaypantlila.jpg alt="COLECCION">
     <img class="fotos-cuadradas-5" src=../img/coleccion-pantfluorose.jpg alt="COLECCION">
     <img class="fotos-cuadradas-5" src=../img/coleccion-2022.jpg alt="COLECCION">
+    <img class="fotos-cuadradas-5" src=../img/coleccion-marion-verdeagua.jpg alt="COLECCION">
    </div>
    <div class="producto">  
     <p class="producto">Pantalón</p>
@@ -140,7 +140,6 @@
     <p class="producto">Pantalón</p>
     <p class="producto">Precio</p>
    </div>
-   <img class="fotos-cuadradas-5" src=../img/coleccion-marion-verdeagua.jpg alt="COLECCION">
 
   <div>
  </main>
